fixing project for final

--- a/index.css
+++ b/index.css
@@ -2,3 +2,15 @@ body {
   padding: 20px;
   background-color: #d4e9f6;
 }
+
+/* styling button */
+button {
+  border-radius: 8px;
+  border: none;
+  padding: 5px 20px;
+  font-size: 12px;
+}
+
+nav {
+  padding: 20px;
+}
